--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,6 @@ mybatis.mapper-locations=mybatis/mapper/**/*.xml
 
 spring.sql.init.schema-locations=classpath:query.sql
 spring.sql.init.mode=always
+
+logging.level.com.example.demo.CompanyMapper=TRACE
+logging.level.com.example.demo.EmployeeMapper=TRACE
